fixed leadership margin error on mobile, scrolling still kinda weird

--- a/src/components/Homepage/Homepage.scss
+++ b/src/components/Homepage/Homepage.scss
@@ -152,8 +152,8 @@
         }
     }
 
-    .card {
-        margin: 0 auto;
+    .leadership-wrapper .react-reveal {
+        margin: 0 auto !important;
     }
 }
 
@@ -298,6 +298,8 @@
     }
 
     .card {
+        
+
         img {
             height: 380px;
             width: 380px;
